indentity.css
label {
    display: inline-flex;
    align-items: center;
    gap: 0.5rem;
    cursor: pointer;
}

[type="checkbox"] {
    appearance: none;
    position: relative;
    background: lightgray;
    border-radius: 8px;
    width: 4em;
    height: 2em;
}

[type="checkbox"]::before {
    content: "";
    position: absolute;
    left: 0;
    width: 50%;
    height: 100%;
    border-radius: 8px;
    transform: scale(0.9);
    background-color: #fff;
    transition: left 100ms linear;
}

[type="checkbox"]:checked {
    background-color: black;
}

[type="checkbox"]:checked::before {
    background-color: white;
    left: 2em;
}

[type="checkbox"]:disabled {
    border-color: lightgray;
    opacity: 0.7;
    cursor: not-allowed;
}

[type="checkbox"]:disabled:before {
    background-color: lightgray;
}

[type="checkbox"]:disabled+span {
    opacity: 0.7;
    cursor: not-allowed;
}

[type="checkbox"]:focus-visible {
    outline-offset: max(2px, 0.1em);
    outline: max(2px, 0.1em) solid tomato;
}


body {
    background: #DFECF2;
    font-family: 'NanumSquare', sans-serif;
}

.id_root {
    font-size: 13px;
    font-weight: 300;
    padding: 0 20px;
}

.id_header {
    display: flex;
    align-items: center;
    height: 60px;
    position: relative;
}

.id_header .back_btn {
    letter-spacing: -0.5px;
    font-size: 15px;
}

.id_header .back_btn span {
    font-size: 16px;
}

.id_header .logo {
    font-weight: 700;
    display: flex;
    align-items: center;
    letter-spacing: -1px;
    font-size: 16px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 220px;
}

.id_header .logo img {
    width: 25px;
    margin-right: 8px;
}

.id_header .menu_btn {
    margin-left: auto;
    position: relative;
    width: 20px;
    height: 20px;
}

.id_header .menu_btn span {
    position: absolute;
    width: 15px;
    height: 2px;
    border-radius: 3px;
    background: #1d1d1d;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%)
}

.id_header .menu_btn span:before,
.id_header .menu_btn span:after {
    content: '';
    display: inline-block;
    width: 15px;
    height: 2px;
    border-radius: 3px;
    background: #1d1d1d;
    position: absolute;
    border: none;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%)
}

.id_header .menu_btn span:before {
    margin-top: -5px;
}

.id_header .menu_btn span:after {
    margin-top: 5px;
}

.id_content {
    background: #fff;
    padding: 30px 20px 0;
    border-radius: 20px;
    height: calc(100vh - 280px);
    position: relative;
}

.id_content .bg {
    position: absolute;
    width: 80%;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0.03;
    z-index: 0;
}

.id_content .img {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 150px;
    margin: 0 auto;
    position: relative;
    z-index: 2;
}

.id_content .inner_box {
    margin-top: 20px;
    position: relative;
}

.id_content .txt_box {
    position: relative;
}

.id_content .txt_box fieldset {
    position: absolute;
    right: 0;
    top: 3px;
}

.id_content .txt_box .txt strong {
    font-size: 22px;
    font-weight: 800;
}

.id_content .txt_box .txt p.number {
    font-size: 19px;
    font-weight: 800;
}

.id_content .txt_box .txt p:not(.number) {
    font-weight: 400;
    margin-top: 5px;
    font-size: 15px;
}

.id_content .date_location {
    position: absolute;
    bottom: 40px;
    left: 0;
    right: 0;
    text-align: center;
}

.id_content .date_location span {
    font-weight: 800;
    font-size: 13px;
}

.id_content .date_location p {
    font-size: 15px;
    font-weight: 400;
}

.fixed_bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background: linear-gradient(90deg, rgba(40, 172, 224, 1) 0%, rgba(18, 113, 201, 1) 29%, rgba(196, 68, 235, 1) 100%);
    height: 40px;
    display: inline-flex;
    align-items: center;
    white-space: nowrap;
    gap: 3px;
}

.fixed_bottom p {
    font-size: 12px;
    font-weight: 300;
    color: #fff;
    opacity: 0.8;
    display: inline-flex;
    animation: scroll-left linear 13s infinite;
}

.icon_arrow {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    background: #fff;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    margin-top: 15px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
}

.icon_arrow img {
    width: 20px;
}

.id_popup_wrap {
    position: fixed;
    width: 100vw;
    height: 100vh;
    left: 0;
    top: 0;
    background: rgba(0, 0, 0, 0.3);
}

.id_popup {
    max-width: 400px;
    width: 80vw;
    border-radius: 12px;
    background: #fff;
    padding: 30px 20px;
    position: fixed;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 2;
}

.id_popup p {
    font-size: 14px;
}

.id_popup .id_btns {
    margin-top: 20px;
    text-align: right;
    display: inline-block;
    width: 100%;
}

.id_popup .id_btns a+a {
    margin-left: 10px;
}

.id_popup .id_btns a {
    text-decoration: none;
    color: green;
    font-size: 14px;
}

@keyframes scroll-left {
    0% {
        transform: translateX(0)
    }

    100% {
        transform: translateX(-100%)
    }
}

